--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ android-sdk/
 backend-java/jdk-17.0.2/
 backend-java/target/
 backend-java/data/
+.env
+.env.prod
+backend-java/src/main/resources/application-prod.properties
+
