--- a/backend-java/Dockerfile
+++ b/backend-java/Dockerfile
@@ -1,8 +1,18 @@
+FROM maven:3.8.4-openjdk-17 AS build
+
+WORKDIR /app
+
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-COPY target/pradha-main-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/pradha-main-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8081
 
